Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.11.1
-
Fix Version/s: 5.11.2
-
Component/s: Multimedia
-
Labels:
-
Platform/s:
Description
Run the attached application and no matter which container and codec is set and supported it always ends up with ogg/theora.
Attachments
Issue Links
- is duplicated by
-
QTBUG-51769 qtcamera with gstreamer backend, encoding setting doesn't work
-
- Closed
-
-
QTBUG-72648 camerabin cannot support I420 configuration to omx encoder
-
- Closed
-