Gstreamer: Set video-profile to CameraBin before GST_STATE_READY

CameraBin creates default (application/ogg, video/x-theora) video profile
or sets custom defined one, but ONLY on GST_STATE_CHANGE_NULL_TO_READY.

If the camera is already loaded then it is not possible to change the video profile.

Since a video profile was never defined, video/x-theora was always used to record video.

Moved setting video profile before it gets to READY.
It fixes an issue with ignoring CameraBinRecorder::applySettings().
This also changes previous behavior when video/x-theora was always used.

To apply custom video settings it requires to use QMediaRecorder::setVideoSettings
before the camera enters the READY state.

Task-number: QTBUG-69895
Change-Id: I3afbf1f8e7c953e2e49e9cad7e96ea0b18a29d1a
Reviewed-by: Christian Stromme <christian.stromme@qt.io>